# monitaringu-rei

./: .gitignore  Cargo.toml  README.md  meson.build  meson_options.txt
build-aux/: cargo  distributables.txt  distribute
extra/mswin/: README.md  installer.nsi.in  x86_64-w64-mingw32.ini
man/: meson.build  monitaringu-rei.1.md
monitaringu-rei-core/: Cargo.toml  build.rs  meson.build
monitaringu-rei-core/src/: cli.rs  error.rs  lib.rs  logging.rs  main.rs  meson.build  supervisor.rs
monitaringu-rei-core/src/cli/: opts.rs
monitaringu-rei-gtk/: Cargo.toml  HACKING.md  build.rs  meson.build
monitaringu-rei-gtk/data/: com.elebihan.monitaringu-rei-gtk.desktop.in  meson.build  monitaringu-rei-gtk.gresource.xml
monitaringu-rei-gtk/data/gtk/: menus.ui  window.ui
monitaringu-rei-gtk/data/icons/: meson.build
monitaringu-rei-gtk/po/: POTFILES.in  fr.po  meson.build
monitaringu-rei-gtk/src/: app.rc  app.rs  dialogs.rs  error.rs  header_bar.rs  i18n.rs  lib.rs  main.rs  meson.build  pkginfo.rs.in  resources.rs  supervisor.rs  window.rs  xdg.rs
shell-completion/: meson.build
shell-completion/bash/: meson.build  monitaringu-rei.bash
shell-completion/zsh/: _monitaringu-rei  meson.build
