[package]
name = "monitaringu-rei-gtk"
version = "0.1.1"
authors = ["Eric Le Bihan <eric.le.bihan.dev@free.fr>"]
license = "MIT"
homepage = "https://github.com/elebihan/monitoringu-rei"
description = """
Monitaringu Rei GTK-based graphical interface.

This tool starts a child program and monitors the files it creates.
"""
edition = "2018"
build = "build.rs"

[dependencies]
once_cell = "1.7.2"
log = "0.4.14"
monitaringu-rei-core = { path = "../monitaringu-rei-core" }
thiserror = "1.0.25"

[dependencies.glib]
version = "0.10.3"

[dependencies.gio]
version = "0.9.1"
features = ["v2_44"]

[dependencies.gtk]
version = "0.9.2"
features = ["v3_20"]

[dependencies.gettext-rs]
version = "0.7.0"
features = ["gettext-system"]
