#
# This file is part of monitaringu-rei
#
# Copyright (C) 2021 Eric Le Bihan <eric.le.bihan.dev@free.fr>
#
# SPDX-License-Identifier: MIT
#

scalable_dir = join_paths('hicolor', 'scalable', 'apps')

install_data(
  join_paths(scalable_dir, 'com.elebihan.monitaringu-rei-gtk.svg'),
  install_dir: join_paths(datadir, 'icons', scalable_dir),
)

symbolic_dir = join_paths('hicolor', 'symbolic', 'apps')

install_data(
  join_paths(symbolic_dir, 'com.elebihan.monitaringu-rei-gtk-symbolic.svg'),
  install_dir: join_paths(datadir, 'icons', symbolic_dir),
)
